Fixed navbar so that workes on other pages and fixed size of project box on smaller devices

--- a/src/components/Navigation/Navbar.module.css
+++ b/src/components/Navigation/Navbar.module.css
@@ -39,12 +39,10 @@
   font-family: var(--font-family);
   font-size: 1.2rem;
   cursor: pointer;
-}
-.navbarLink {
   text-decoration: none;
   color: var(--text-color-primary);
 }
-.navbarLink:hover {
+.navbarParagraph:hover {
   color: #7b7b7b;
   font-size: 1.3rem;
 }
@@ -119,7 +117,11 @@
   }
   .navbarParagraph {
     width: 100%;
+    display: flex;
+    flex-direction: column;
     text-align: left;
+    margin-left: 4rem;
+    padding-bottom: 2rem;
   }
   .navbarLogo img {
     width: 4rem;
